# GraphFlow-Dynamic-Multi-Source-RAG-System

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  UML_diagram_mermaid_code.txt  description.txt  requirements.txt
rust_auth/: Cargo.toml
rust_auth/src/: main.rs
src/api/: routes.py
src/config/: prompts.yaml  settings.py
src/core/: config.py
src/db/: mongo_client.py
src/llms/: openai.py
src/memory/: conversation_store.py
src/models/: query_request.py  state.py
src/rag/: document_upload.py  graph_builder.py  retriever_setup.py
streamlit_app/: home.py
streamlit_app/pages/: chat.py
streamlit_app/utils/: api_client.py
