[package]
name = "rust-auth-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web    = "4"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
jsonwebtoken = "9"
bcrypt       = "0.15"
uuid         = { version = "1", features = ["v4"] }
tokio        = { version = "1", features = ["full"] }
chrono       = { version = "0.4", features = ["serde"] }
# MongoDB async driver
mongodb      = { version = "3" }
# Load .env file into environment at startup
dotenvy      = "0.15"
# futures utilities for async streams
futures      = "0.3"
